syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "PropostasGrpc";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service PropostasGrpcService {

  rpc create(CreateProposalRequest) returns (CreateProposalResponse) {}
}

message CreateProposalRequest {
  string document = 1;
  string email    = 2;
  string name     = 3;
  string address  = 4;
  double salary   = 5;
}

message CreateProposalResponse {
  string proposalId = 1;
  google.protobuf.Timestamp createdAt  = 2;
}